feat: Enhance report view with charting and citations
Integrates a simple bar chart visualization for synthesis data and implements citation formatting utilities for APA, MLA, and Chicago styles. This allows for richer reporting and better source management within the research assistant.

Also, refactors Gemini service to include retry logic for API calls and makes the retry utility exportable. Improves service worker registration robustness by handling non-HTTP protocols and logging specific origin errors as warnings. Updates task board to display formatted hostnames for URLs.

--- a/index.html
+++ b/index.html
@@ -71,11 +71,31 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js').then(registration => {
-            console.log('SW registered: ', registration);
-          }).catch(registrationError => {
-            console.log('SW registration failed: ', registrationError);
-          });
+          try {
+            // Check protocol to avoid constructing URL on 'about:blank' or 'data:' schemes
+            if (!window.location.protocol.startsWith('http')) {
+              console.warn('Service Worker skipped: Non-HTTP protocol detected.');
+              return;
+            }
+
+            // Using strict relative URL resolution based on window.location to match current origin
+            const swUrl = new URL('./sw.js', window.location.href).href;
+            
+            navigator.serviceWorker.register(swUrl)
+              .then(registration => {
+                console.log('SW registered: ', registration);
+              })
+              .catch(registrationError => {
+                // Silence specific origin errors in preview environments if they persist
+                if (registrationError.message && registrationError.message.includes('origin')) {
+                  console.warn('SW Registration: Origin mismatch (likely preview environment). Offline features may be limited.');
+                } else {
+                  console.log('SW registration failed: ', registrationError);
+                }
+              });
+          } catch (e) {
+            console.warn('Service Worker initialization failed:', e);
+          }
         });
       }
     </script>
